<resources>
    <string name="app_name">Attractions</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Gallery</string>
    <string name="second_fragment_label">Camera</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="date_format">00.00.0000</string>
    <string name="delete">Delete</string>
    <string name="MAPS_API_KEY">AIzaSyC66RDT57Lh5Z2G5mcO8pu_WUn29yiVc6g</string>
    <string name="clear_database">Delete All Photos</string>
    <string name="photo">Photo</string>
    <string name="open_map">Open map</string>
</resources>