<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="Maps"
    app:startDestination="@id/PhotoGallery">

    <fragment
        android:id="@+id/PhotoGallery"
        android:name="ru.kanogor.attractions.presentation.photoGallery.PhotoGalleryFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_photo_gallery">

        <action
            android:id="@+id/action_PhotoGallery_to_Camera"
            app:destination="@id/CameraFragment"
            app:popUpTo="@id/CameraFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_PhotoGallery_to_openPhotoFragment"
            app:destination="@id/OpenPhotoFragment"
            app:popUpTo="@id/PhotoGallery" />
        <action
            android:id="@+id/action_PhotoGallery_to_MapsFragment"
            app:destination="@id/MapsFragment"
            app:popUpTo="@id/PhotoGallery" />
    </fragment>
    <fragment
        android:id="@+id/CameraFragment"
        android:name="ru.kanogor.attractions.presentation.camera.CameraFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_camera">

        <action
            android:id="@+id/action_Camera_to_PhotoGallery"
            app:destination="@id/PhotoGallery"
            app:popUpTo="@id/CameraFragment" />
    </fragment>
    <fragment
        android:id="@+id/OpenPhotoFragment"
        android:name="ru.kanogor.attractions.presentation.openPhoto.OpenPhotoFragment"
        android:label="@string/photo"
        tools:layout="@layout/fragment_open_photo">
        <action
            android:id="@+id/action_openPhotoFragment_to_PhotoGallery"
            app:destination="@id/PhotoGallery"
            app:popUpTo="@id/PhotoGallery"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/MapsFragment"
        android:name="ru.kanogor.attractions.presentation.mapsFragment.MapsFragment"
        android:label="Map"
        tools:layout="@layout/fragment_maps" />
</navigation>